# mcp-obsidian

./: .gitignore  pyproject.toml
src/mcp_obsidian/: embeddings.py  server.py  tools.py
