[project]
name = "mcp-obsidian"
version = "0.2.1"
description = "MCP server to work with Obsidian via the remote REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.10",
    "mcp>=1.1.0",
    "mdextractor>=2025.4.231259",
    "mistune>=3.1.3",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "typer>=0.15.4",
]
[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyright>=1.1.389", "rich>=14.0.0"]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"
ob-db = "mcp_obsidian.embeddings:app"
